<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_house"
        android:title="@string/home"
        />
    <item
        android:id="@+id/nav_analytics"
        android:icon="@drawable/ic_chart"
        android:title="@string/analytics"
        />
    <item
        android:id="@+id/nav_add_transaction"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/transaction"
        />
    <item
        android:id="@+id/nav_budget"
        android:icon="@drawable/ic_budget"
        android:title="@string/budget"
        />
    <item
        android:id="@+id/nav_achievement"
        android:icon="@drawable/ic_trophy"
        android:title="@string/achievement"
        />
</menu>